[project]
name = "termoweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.11.13",
]

[tool.ruff]
src = ["src", "tests"]

[tool.mypy]
files = [
  "src/**/*.py",
]
